--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v3
       
     - name: Build Docker Image
-      run: docker build -t alpine-node-openssl-fips:latest . 
+      run: docker build --driver-opt env.BUILDKIT_STEP_LOG_MAX_SIZE=10485760 -t alpine-node-openssl-fips:latest . 
       
     - name: Login to GitHub Repository
       uses: docker/login-action@v2
