--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,9 +23,24 @@ jobs:
     - name: Checkout the software  
       uses: actions/checkout@v4
       
-    - name: Build Docker Image
-      run: docker build --progress=plain -t alpine-node-openssl-fips:latest . 
-      
+    - name: Restore Docker build cache
+      uses: actions/cache@v4
+      with:
+        path: .buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: Build Docker Image with cache
+      run: |
+           docker buildx build \
+            --progress=plain \
+            --cache-from=type=local,src=.buildx-cache --cache-to=type=local,dest=.buildx-cache \
+            -t alpine-node-openssl-fips:latest .
+                      
     - name: Login to GitHub Repository
       uses: docker/login-action@v3
       with:
