--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,24 +34,12 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build Docker Image with cache
-      run: |
-           docker buildx build \
-            --progress=plain \
-            --cache-from=type=local,src=.buildx-cache --cache-to=type=local,dest=.buildx-cache \
-            -t alpine-node-openssl-fips:latest .
-                      
     - name: Login to GitHub Repository
       uses: docker/login-action@v3
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Tag, push and deploy image to Github Repository
-      run: |
-        docker image tag alpine-node-openssl-fips:latest ghcr.io/izgateway/alpine-node-openssl-fips:latest
-        docker image push --all-tags ghcr.io/izgateway/alpine-node-openssl-fips
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -59,18 +47,28 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-1
-
+        
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-
-    - name: Tag and push image to Amazon ECR
+              
+    - name: Build Docker Image with cache
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: alpine-node-openssl-fips
+      run: docker buildx build \
+            --progress=plain \
+            --cache-from=type=local,src=.buildx-cache --cache-to=type=local,dest=.buildx-cache \
+            -t alpine-node-openssl-fips:latest \ 
+            -t ghcr.io/izgateway/alpine-node-openssl-fips:latest \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:${{github.run_number}} \
+            -t $ECR_REGISTRY/$ECR_REPOSITORY:latest \
+            --load .
+                      
+    - name: Tag, push and deploy images to Github Repository and ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: alpine-node-openssl-fips
       run: |
-        docker image tag alpine-node-openssl-fips:latest $ECR_REGISTRY/$ECR_REPOSITORY:${{github.run_number}}
-        docker image tag alpine-node-openssl-fips:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
+        docker image push --all-tags ghcr.io/izgateway/alpine-node-openssl-fips
         docker image push --all-tags $ECR_REGISTRY/$ECR_REPOSITORY
-
-      
