--- a/Dockerfile.nodebuild
+++ b/Dockerfile.nodebuild
@@ -126,9 +126,10 @@ RUN awk '/^# For FIPS/ { print; system("cat /tmp/openssl_fips_insert.txt"); skip
     rm /tmp/openssl_fips_insert.txt
 
 # Download and install Elastic Beats (filebeat and metricbeat)
-RUN export ELASTIC_VERSION=$(curl -s https://api.github.com/repos/elastic/beats/releases/latest | jq -r .tag_name | sed 's/^v//') && \
-    echo "Installing Elastic Beats version: ${ELASTIC_VERSION}" && \
-    curl https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ELASTIC_VERSION}-linux-x86_64.tar.gz -o /filebeat.tar.gz && \
+# Using hardcoded version to avoid GitHub API rate limiting issues
+ARG ELASTIC_VERSION=9.2.4
+RUN echo "Installing Elastic Beats version: ${ELASTIC_VERSION}" && \
+    curl -f https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ELASTIC_VERSION}-linux-x86_64.tar.gz -o /filebeat.tar.gz && \
     tar xzf /filebeat.tar.gz && \
     rm /filebeat.tar.gz && \
     mv filebeat-${ELASTIC_VERSION}-linux-x86_64 filebeat && \
